#140 JIRA/Fix User Manual Button Links

--- a/savis4/src/app/features/two-proportions/two-proportions.component.scss
+++ b/savis4/src/app/features/two-proportions/two-proportions.component.scss
@@ -67,17 +67,16 @@ button:hover{
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col);
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col); 
   }
 }
 
@@ -94,17 +93,16 @@ button:hover{
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col); 
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col); 
   }
 }
 
