--- a/savis4/src/app/features/one-proportion/one-proportion.component.scss
+++ b/savis4/src/app/features/one-proportion/one-proportion.component.scss
@@ -213,17 +213,16 @@ padding-bottom: 20px;
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col);
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col);
   }
 }
 
@@ -240,17 +239,16 @@ padding-bottom: 20px;
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col); 
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col);
   }
 }
 
