--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
@@ -209,17 +209,16 @@ button:disabled, .btn:disabled {
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col);
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col); 
   }
 }
 
@@ -236,16 +235,15 @@ button:disabled, .btn:disabled {
   display: inline-flex;
   align-items: center;
   gap: 0.4rem;
-  background-color: green; 
+  background-color: var(--third-col);
   color: white; 
   padding: 8px 16px; 
   border: none; 
   border-radius: 4px; 
   cursor: pointer; 
-  font-weight: bold; 
   transition: background-color 0.3s; 
 
   &:hover {
-    background-color: darkgreen; 
+    background-color: var(--fourth-col); 
   }
 }
