--- a/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/user-manual/user-manual-components/bar-chart/bar-chart.component.scss
@@ -20,15 +20,11 @@
     text-decoration: none;
     cursor: pointer;
     display: inline-block;
-    transition: color 0.3s;
-    &:hover {
-      color: var(--fourth-col);
-    }
-    background: linear-gradient(180deg, var(--key-top, #5aa573), var(--key-bot, #3f7a51));
-    box-shadow:
-    0 6px 0 var(--key-edge, #2e5f40),
-    0 2px 0 rgba(255,255,255,.12) inset,
-    0 -10px 18px rgba(0,0,0,.18) inset;
+    background-color: var(--third-col);
+  }
+
+  .back-button:hover{
+    background-color: var(--fourth-col);
   }
 
   .content {
