--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
@@ -1,3 +1,9 @@
+.body-box{
+  min-height: 100vh;
+  background-color: var(--fifth-col);
+  padding-bottom: 50px;
+}
+
 $primary-background: var(--third-col);
 $text-color: white;
 $chart-height: 10rem;
