--- a/savis4/src/app/features/bar-chart/bar-chart.component.html
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.html
@@ -1,112 +1,114 @@
-<app-navbar></app-navbar>
-<!--link to user manual -->
-<div class="manual-link">
-  <button
-    class="btn manual-btn"
-    type="button"
-    [routerLink]="['/bar-chart']">
-       Bar Chart Guide
-  </button>
-</div>
-
-<!--link to practice problems-->
-<div class = "problems-link">
+<div class='body-box'>
+    <app-navbar></app-navbar>
+    <!--link to user manual -->
+    <div class="manual-link">
     <button
-        class = "btn problems-btn"
-        type = "button"
-        [routerLink] ="['/problems-bar-chart']">
-            Bar Chart Practice Problems
+        class="btn manual-btn"
+        type="button"
+        [routerLink]="['/bar-chart']">
+        Bar Chart Guide
     </button>
-</div>
-    
-
-<div id="bar-chart-tutorial">
-    <h1 class="text-center">{{ 'barChart_title' | translate }}</h1>
-    <div class="chart-area">
-        <div id="control" class="container">
-            <h2>1. {{ 'barChart_inputData' | translate }}</h2>
-            <form>
-                <div class="form-group">
-                    <select id="sample-data-options" (change)="sampleSelect($event)">
-                        <option disabled selected>{{ 'barChart_select_sample_data' | translate }}</option>
-                        <option value="sample1">{{ 'barChart_sample1' | translate }}</option>
-                        <option value="sample2">{{ 'barChart_sample2' | translate }}</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <textarea name="csvInput" rows="8" id="csv-input" placeholder="{{ 'barChart_placeholder' | translate }}" [(ngModel)]="csvTextArea"></textarea>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="load-data-btn" (click)="loadDataButton()">{{'barChart_loadData' | translate}}</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="reset-btn" (click)="totalReset()">{{ 'barChart_reset' | translate }}</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="upload-btn" (click)="triggerFileInput()">{{ 'barChart_uploadData' | translate }}</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="export-input-pdf-btn" (click)="exportInputAsPDF()" [disabled]="isInputDataSizeNumNaN()">Export as PDF</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="export-input-docx-btn" (click)="exportInputAsDOCX()" [disabled]="isInputDataSizeNumNaN()">Export as DOCX</button>
-                </div>
-                <input type="file" id="fileInput" (change)="onFileSelect($event)" #fileInput style="display: none;">
-                <div class="form-group">
-                    <p class="text-display" id="input-data-size-text">{{ 'barChart_size' | translate }} <i>N</i> : {{ inputDataSizeNum }}</p>
-                    <span class="text-error" #input_data_size_number *ngIf="inputErrorMsg">{{ inputErrorMsg }}</span>
-                </div>
-                <div class="mx-8">
-                    <app-save-load-buttons
-                        [data]="csvTextArea"
-                        [feature]="'barChart'"
-                    ></app-save-load-buttons>
-                </div>
-            </form>
-        </div>
-
-        <div id="view">
-            <canvas #inputChart class="container"></canvas>
-        </div>
-        <div id="result">
-            <h4 #input_data_table></h4>
-            <table class="tableData" #input_data_display></table>
-        </div>
     </div>
 
-    <div class="green-line"></div>
-
-    <div class="chart-area">
-        <div id="control" class="container">
-            <h2>2. {{ 'barChart_draw_samples' | translate }}</h2>
-            <form>
-                <div class="form-group">
-                    <label for="sampleInput">{{ 'barChart_sample_size' | translate }}:</label>
-                    <input name="sampleInput" type="number" id="sampleInput" min="1" [(ngModel)]="sampleSizeInput" max="10000">
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="get-sample-btn" (click)="updateSampleData()" [disabled]="isInputDataSizeNumNaN()">{{ 'barChart_run_sim' | translate }}</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="export-sample-pdf-btn" (click)="exportSampleAsPDF()" [disabled]="sampleDataArray.length === 0">Export as PDF</button>
-                </div>
-                <div class="form-group">
-                    <button class="btn" id="export-sample-docx-btn" (click)="exportSampleAsDOCX()" [disabled]="sampleDataArray.length === 0">Export as DOCX</button>
-                </div>
-                <p class="text-display" id="=sample-data-size-text">{{ 'barChart_size' | translate }} <i>n</i> : {{ sampleDataSizeNum }}</p>
-                <p class="text-error" id="get-sample-error-msg" *ngIf="sampleErrorMsg">{{ sampleErrorMsg }}</p>
-            </form>
-        </div>
+    <!--link to practice problems-->
+    <div class = "problems-link">
+        <button
+            class = "btn problems-btn"
+            type = "button"
+            [routerLink] ="['/problems-bar-chart']">
+                Bar Chart Practice Problems
+        </button>
+    </div>
         
-        <div id="view">
-            <canvas #sampleChart class="container"></canvas>
+
+    <div id="bar-chart-tutorial">
+        <h1 class="text-center">{{ 'barChart_title' | translate }}</h1>
+        <div class="chart-area">
+            <div id="control" class="container">
+                <h2>1. {{ 'barChart_inputData' | translate }}</h2>
+                <form>
+                    <div class="form-group">
+                        <select id="sample-data-options" (change)="sampleSelect($event)">
+                            <option disabled selected>{{ 'barChart_select_sample_data' | translate }}</option>
+                            <option value="sample1">{{ 'barChart_sample1' | translate }}</option>
+                            <option value="sample2">{{ 'barChart_sample2' | translate }}</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="csvInput" rows="8" id="csv-input" placeholder="{{ 'barChart_placeholder' | translate }}" [(ngModel)]="csvTextArea"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="load-data-btn" (click)="loadDataButton()">{{'barChart_loadData' | translate}}</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="reset-btn" (click)="totalReset()">{{ 'barChart_reset' | translate }}</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="upload-btn" (click)="triggerFileInput()">{{ 'barChart_uploadData' | translate }}</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="export-input-pdf-btn" (click)="exportInputAsPDF()" [disabled]="isInputDataSizeNumNaN()">Export as PDF</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="export-input-docx-btn" (click)="exportInputAsDOCX()" [disabled]="isInputDataSizeNumNaN()">Export as DOCX</button>
+                    </div>
+                    <input type="file" id="fileInput" (change)="onFileSelect($event)" #fileInput style="display: none;">
+                    <div class="form-group">
+                        <p class="text-display" id="input-data-size-text">{{ 'barChart_size' | translate }} <i>N</i> : {{ inputDataSizeNum }}</p>
+                        <span class="text-error" #input_data_size_number *ngIf="inputErrorMsg">{{ inputErrorMsg }}</span>
+                    </div>
+                    <div class="mx-8">
+                        <app-save-load-buttons
+                            [data]="csvTextArea"
+                            [feature]="'barChart'"
+                        ></app-save-load-buttons>
+                    </div>
+                </form>
+            </div>
+
+            <div id="view">
+                <canvas #inputChart class="container"></canvas>
+            </div>
+            <div id="result">
+                <h4 #input_data_table></h4>
+                <table class="tableData" #input_data_display></table>
+            </div>
         </div>
-        <div id="result">
-            <h4 #sample_data_table></h4>
-            <table #sample_data_display></table>
+
+        <div class="green-line"></div>
+
+        <div class="chart-area">
+            <div id="control" class="container">
+                <h2>2. {{ 'barChart_draw_samples' | translate }}</h2>
+                <form>
+                    <div class="form-group">
+                        <label for="sampleInput">{{ 'barChart_sample_size' | translate }}:</label>
+                        <input name="sampleInput" type="number" id="sampleInput" min="1" [(ngModel)]="sampleSizeInput" max="10000">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="get-sample-btn" (click)="updateSampleData()" [disabled]="isInputDataSizeNumNaN()">{{ 'barChart_run_sim' | translate }}</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="export-sample-pdf-btn" (click)="exportSampleAsPDF()" [disabled]="sampleDataArray.length === 0">Export as PDF</button>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn" id="export-sample-docx-btn" (click)="exportSampleAsDOCX()" [disabled]="sampleDataArray.length === 0">Export as DOCX</button>
+                    </div>
+                    <p class="text-display" id="=sample-data-size-text">{{ 'barChart_size' | translate }} <i>n</i> : {{ sampleDataSizeNum }}</p>
+                    <p class="text-error" id="get-sample-error-msg" *ngIf="sampleErrorMsg">{{ sampleErrorMsg }}</p>
+                </form>
+            </div>
+            
+            <div id="view">
+                <canvas #sampleChart class="container"></canvas>
+            </div>
+            <div id="result">
+                <h4 #sample_data_table></h4>
+                <table #sample_data_display></table>
+            </div>
         </div>
     </div>
-</div>
-<footer class="static-footer">
-    {{ "nav_copyright" | translate }}
-  </footer>
+    </div>
+    <footer class="static-footer">
+        {{ "nav_copyright" | translate }}
+    </footer>
