--- a/savis4/src/app/features/bar-chart/bar-chart.component.scss
+++ b/savis4/src/app/features/bar-chart/bar-chart.component.scss
@@ -1,3 +1,9 @@
+.body-box{
+  min-height: 100vh;
+  background-color: var(--fifth-col);
+  padding-bottom: 50px;
+}
+
 #bar-chart-tutorial {
   min-height: 100vh;
   padding: 20px;
