--- a/savis4/src/app/features/correlation/correlation.component.scss
+++ b/savis4/src/app/features/correlation/correlation.component.scss
@@ -1,3 +1,9 @@
+.body-box{
+  min-height: 100vh;
+  background-color: var(--fifth-col);
+  padding-bottom: 50px;
+}
+
 .p-4{
   background-color: var(--fifth-col);
   padding-bottom: 100px;
