--- a/savis4/src/app/features/one-mean/one-mean.component.scss
+++ b/savis4/src/app/features/one-mean/one-mean.component.scss
@@ -1,3 +1,9 @@
+.body-box{
+  min-height: 100vh;
+  background-color: var(--fifth-col);
+  padding-bottom: 50px;
+}
+
 #dot-chart-tutorial{
   background-color: var(--fifth-col);
   padding: 20px;
