--- a/savis4/src/app/features/two-means/two-means.component.scss
+++ b/savis4/src/app/features/two-means/two-means.component.scss
@@ -1,3 +1,9 @@
+.body-box{
+  min-height: 100vh;
+  background-color: var(--fifth-col);
+  padding-bottom: 50px;
+}
+
 .if-disabled[disabled]{
   cursor: not-allowed;
 }
