--- a/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
+++ b/savis4/src/app/features/two-proportions-ci/two-proportions-ci.component.html
@@ -1,314 +1,316 @@
-<app-navbar></app-navbar>
-<!--link to user manual -->
-<div class="manual-link">
-  <button
-    class="btn manual-btn"
-    type="button"
-    [routerLink]="['/tpci']">
-        Two Proportion Confidence Interval Guide
-  </button>
-</div>
-
-<!--link to practice problems-->
-<div class="problems-link">
-  <button
-    class="btn problems-btn"
-    type="button"
-    [routerLink]="['/problems-tpci']">
-        Two Proportion Confidence Interval Practice Problems
-  </button>
-</div>
-
-<div class="two-proportions">
-  <h1 class="text-center">{{ "tpci_title" | translate }}</h1>
-
-  <h2 style="margin-top:16px;">1. {{ "tpci_enter_data" | translate }}</h2>
-  <input type="checkbox" style="float: right" checked />
-  <div id="input-section" class="section">
-    <div class="lhs">
-      <table>
-        <thead>
-          <tr>
-            <td></td>
-            <td class="desc text-center">{{ "tpci_group_A" | translate }}</td>
-            <td class="desc text-center">{{ "tpci_group_B" | translate }}</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="desc">{{ "tpci_successes" | translate }}</td>
-            <td>
-              <input
-                class="text-center"
-                type="number"
-                id="a-success"
-                value="0"
-                min="0"
-                step="1"
-                [(ngModel)]="numASuccesses"
-              />
-            </td>
-            <td>
-              <input
-                class="text-center"
-                type="number"
-                id="b-success"
-                value="0"
-                min="0"
-                step="1"
-                [(ngModel)]="numBSuccesses"
-              />
-            </td>
-          </tr>
-          <tr>
-            <td class="desc">{{ "tpci_failures" | translate }}</td>
-            <td>
-              <input
-                class="text-center"
-                type="number"
-                id="a-failure"
-                value="0"
-                min="0"
-                step="1"
-                [(ngModel)]="numAFailures"
-              />
-            </td>
-            <td>
-              <input
-                class="text-center"
-                type="number"
-                id="b-failure"
-                value="0"
-                min="0"
-                step="1"
-                [(ngModel)]="numBFailures"
-              />
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <br />
-      <button class="btn" (click)="loadData()">
-        {{ "tpci_load_data" | translate }}
-      </button>
-      <p></p>
-      <div class="stats">
-        <div>
-          <span
-            >{{
-              "tpci_Prop_of_Success_GroupA" | translate
-            }}
-            (p<sub>A</sub>):</span
-          >
-          <span>{{ inputProportionsGroupA }}</span>
-        </div>
-        <div>
-          <span
-            >{{
-              "tpci_Prop_of_Success_GroupB" | translate
-            }}
-            (p<sub>b</sub>):</span
-          >
-          <span>{{ inputProportionsGroupB }}</span>
-        </div>
-        <div>
-          <span
-            >{{ "tpci_Difference_of_Proportions" | translate }} (p<sub>A</sub> -
-            p<sub>B</sub>):</span
-          >
-          <span>{{ inputDifferenceProportions }}</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="rhs">
-      <table style="margin-left: 3em">
-        <tr>
-          <td style="text-align: right">
-            <span summary="numAFailure" summaryint>{{ numAFailures }}</span>
-            {{ "tpci_failures" | translate }}
-          </td>
-          <td rowspan="2" colspan="2">
-            <div class="chart-wrap mx-auto flex items-center justify-center">
-              <canvas #chart1></canvas>
-            </div>
-
-            <div class="mx-auto flex items-center justify-center">
-              <label for="multiply-group1" style="font-size: 13px">{{
-                "tpci_increase_by" | translate
-              }}</label>
-              <input
-                type="number"
-                step="1"
-                min="10"
-                value="10"
-                id="increment"
-                style="width: 20%; text-align: center"
-                [(ngModel)]="factor"
-              />
-            </div>
-          </td>
-          <td>
-            <span summary="numBFailure" summaryint>{{ numBFailures }}</span>
-            {{ "tpci_failures" | translate }}
-          </td>
-        </tr>
-        <tr>
-          <td style="text-align: right">
-            <span summary="numASuccess" summaryint>{{ numASuccesses }}</span>
-            {{ "tpci_successes" | translate }}
-          </td>
-          <td>
-            <span summary="numBSuccess" summaryint>{{ numBSuccesses }}</span>
-            {{ "tpci_successes" | translate }}
-          </td>
-        </tr>
-      </table>
-    </div>
+<div class="body-box">
+  <app-navbar></app-navbar>
+  <!--link to user manual -->
+  <div class="manual-link">
+    <button
+      class="btn manual-btn"
+      type="button"
+      [routerLink]="['/tpci']">
+          Two Proportion Confidence Interval Guide
+    </button>
   </div>
 
-  <div class="green-line"></div>
-
-  <h2>2. {{ "tpci_run_simulations" | translate }}</h2>
-  <input type="checkbox" style="float: right" checked />
-  <div class="section">
-    <div class="lhs">
-      <label>
-        {{ "tpci_number_of_simulations" | translate }}:
-        <input
-          id="num-simulations"
-          type="number"
-          min="1"
-          value="1"
-          max="1000"
-          [(ngModel)]="numSimulations"
-        />
-      </label>
-      <button class="btn my-2" (click)="runSimulation()">
-        {{ "tpci_run_simulations" | translate }}
-      </button>
-      <p></p>
-      <div class="stats">
-        <div>
-          <span>{{ "tpci_A_Successes" | translate }} (p<sub>A</sub>):</span>
-          <span>{{ simulationProportionGroupA }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_B_Successes" | translate }} (p<sub>B</sub>):</span>
-          <span>{{ simulationProportionGroupB }}</span>
-        </div>
-        <div>
-          <span
-            >{{ "tpci_diff_1" | translate }} (p<sub>A</sub> -
-            p<sub>B</sub>):</span
-          >
-          <span>{{ simulationDifferenceProportions }}</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="rhs">
-      <h3 style="margin-left: 3em">
-        {{ "tpci_most_recent_draw" | translate }}
-      </h3>
-      <table style="margin-left: 3em">
-        <tr>
-          <td style="text-align: right">
-            <span summary="sampleAFailure">{{ simAFailures }}</span> Failures
-          </td>
-          <td rowspan="2" colspan="2">
-            <div class="chart-wrap mx-auto flex items-center justify-center">
-              <canvas #chart2></canvas>
-            </div>
-          </td>
-          <td>
-            <span summary="sampleBFailure">{{ simBFailures }}</span> Failures
-          </td>
-        </tr>
-        <tr>
-          <td style="text-align: right">
-            <span summary="sampleASuccess">{{ simASuccesses }}</span>
-            {{ "tpci_successes" | translate }}
-          </td>
-          <td>
-            <span summary="sampleBSuccess">{{ simBSuccesses }}</span>
-            {{ "tpci_successes" | translate }}
-          </td>
-        </tr>
-      </table>
-    </div>
+  <!--link to practice problems-->
+  <div class="problems-link">
+    <button
+      class="btn problems-btn"
+      type="button"
+      [routerLink]="['/problems-tpci']">
+          Two Proportion Confidence Interval Practice Problems
+    </button>
   </div>
 
-  <div class="green-line"></div>
+  <div class="two-proportions">
+    <h1 class="text-center">{{ "tpci_title" | translate }}</h1>
 
-  <h2>3. {{ "tpci_sampling_distribution_difference" | translate }}</h2>
-  <input type="checkbox" style="float: right" checked />
-  <div class="section flex-row">
-    <div class="lhs">
-      <div class="flex flex-col items-center justify-center">
-        <div>
-          <label for="confidence-level"
-            >{{ "tpci_confidence_level" | translate }}
-            {{ confidenceLevel }} %</label
-          >
-        </div>
-        <input
-          type="range"
-          min="1"
-          max="100"
-          class="w-1/2"
-          step="1"
-          id="confidence-level"
-          [(ngModel)]="confidenceLevel"
-        />
-        <button
-          type="button"
-          class="btn w-1/2"
-          id="buildCI"
-          (click)="updateLastChart()"
-        >
-          Build
+    <h2 style="margin-top:16px;">1. {{ "tpci_enter_data" | translate }}</h2>
+    <input type="checkbox" style="float: right" checked />
+    <div id="input-section" class="section">
+      <div class="lhs">
+        <table>
+          <thead>
+            <tr>
+              <td></td>
+              <td class="desc text-center">{{ "tpci_group_A" | translate }}</td>
+              <td class="desc text-center">{{ "tpci_group_B" | translate }}</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="desc">{{ "tpci_successes" | translate }}</td>
+              <td>
+                <input
+                  class="text-center"
+                  type="number"
+                  id="a-success"
+                  value="0"
+                  min="0"
+                  step="1"
+                  [(ngModel)]="numASuccesses"
+                />
+              </td>
+              <td>
+                <input
+                  class="text-center"
+                  type="number"
+                  id="b-success"
+                  value="0"
+                  min="0"
+                  step="1"
+                  [(ngModel)]="numBSuccesses"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td class="desc">{{ "tpci_failures" | translate }}</td>
+              <td>
+                <input
+                  class="text-center"
+                  type="number"
+                  id="a-failure"
+                  value="0"
+                  min="0"
+                  step="1"
+                  [(ngModel)]="numAFailures"
+                />
+              </td>
+              <td>
+                <input
+                  class="text-center"
+                  type="number"
+                  id="b-failure"
+                  value="0"
+                  min="0"
+                  step="1"
+                  [(ngModel)]="numBFailures"
+                />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+        <br />
+        <button class="btn" (click)="loadData()">
+          {{ "tpci_load_data" | translate }}
         </button>
+        <p></p>
+        <div class="stats">
+          <div>
+            <span
+              >{{
+                "tpci_Prop_of_Success_GroupA" | translate
+              }}
+              (p<sub>A</sub>):</span
+            >
+            <span>{{ inputProportionsGroupA }}</span>
+          </div>
+          <div>
+            <span
+              >{{
+                "tpci_Prop_of_Success_GroupB" | translate
+              }}
+              (p<sub>b</sub>):</span
+            >
+            <span>{{ inputProportionsGroupB }}</span>
+          </div>
+          <div>
+            <span
+              >{{ "tpci_Difference_of_Proportions" | translate }} (p<sub>A</sub> -
+              p<sub>B</sub>):</span
+            >
+            <span>{{ inputDifferenceProportions }}</span>
+          </div>
+        </div>
       </div>
-      <p></p>
-      <div class="stats">
-        <div>
-          <span>{{ "tpci_original_dataset_difference" | translate }}</span>
-          <span>{{ inputDifferenceProportions }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_mean_sample_differences" | translate }}</span>
-          <span>{{ simMean }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_standard_deviation" | translate }}</span>
-          <span>{{ simStdDev }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_lower_bound" | translate }}</span>
-          <span>{{ lowerBound }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_upper_bound" | translate }}</span>
-          <span>{{ upperBound }}</span>
-        </div>
-        <div>
-          <span>{{ "tpci_total_number_samples" | translate }}</span>
-          <span>{{ simTotal }}</span>
-        </div>
-      </div>
-      
-      <!-- Export buttons -->
-      <div class="form-group mt-3">
-        <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="!isExportEnabled">{{ 'tpc_export_pdf' | translate }}</button>
-      </div>
-      <div class="form-group mt-3">
-        <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="!isExportEnabled">{{ 'tpc_export_docx' | translate }}</button>
+
+      <div class="rhs">
+        <table style="margin-left: 3em">
+          <tr>
+            <td style="text-align: right">
+              <span summary="numAFailure" summaryint>{{ numAFailures }}</span>
+              {{ "tpci_failures" | translate }}
+            </td>
+            <td rowspan="2" colspan="2">
+              <div class="chart-wrap mx-auto flex items-center justify-center">
+                <canvas #chart1></canvas>
+              </div>
+
+              <div class="mx-auto flex items-center justify-center">
+                <label for="multiply-group1" style="font-size: 13px">{{
+                  "tpci_increase_by" | translate
+                }}</label>
+                <input
+                  type="number"
+                  step="1"
+                  min="10"
+                  value="10"
+                  id="increment"
+                  style="width: 20%; text-align: center"
+                  [(ngModel)]="factor"
+                />
+              </div>
+            </td>
+            <td>
+              <span summary="numBFailure" summaryint>{{ numBFailures }}</span>
+              {{ "tpci_failures" | translate }}
+            </td>
+          </tr>
+          <tr>
+            <td style="text-align: right">
+              <span summary="numASuccess" summaryint>{{ numASuccesses }}</span>
+              {{ "tpci_successes" | translate }}
+            </td>
+            <td>
+              <span summary="numBSuccess" summaryint>{{ numBSuccesses }}</span>
+              {{ "tpci_successes" | translate }}
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
-    <div class="rhs-chart3">
-      <canvas #chart3 class="half-height"></canvas>
+
+    <div class="green-line"></div>
+
+    <h2>2. {{ "tpci_run_simulations" | translate }}</h2>
+    <input type="checkbox" style="float: right" checked />
+    <div class="section">
+      <div class="lhs">
+        <label>
+          {{ "tpci_number_of_simulations" | translate }}:
+          <input
+            id="num-simulations"
+            type="number"
+            min="1"
+            value="1"
+            max="1000"
+            [(ngModel)]="numSimulations"
+          />
+        </label>
+        <button class="btn my-2" (click)="runSimulation()">
+          {{ "tpci_run_simulations" | translate }}
+        </button>
+        <p></p>
+        <div class="stats">
+          <div>
+            <span>{{ "tpci_A_Successes" | translate }} (p<sub>A</sub>):</span>
+            <span>{{ simulationProportionGroupA }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_B_Successes" | translate }} (p<sub>B</sub>):</span>
+            <span>{{ simulationProportionGroupB }}</span>
+          </div>
+          <div>
+            <span
+              >{{ "tpci_diff_1" | translate }} (p<sub>A</sub> -
+              p<sub>B</sub>):</span
+            >
+            <span>{{ simulationDifferenceProportions }}</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="rhs">
+        <h3 style="margin-left: 3em">
+          {{ "tpci_most_recent_draw" | translate }}
+        </h3>
+        <table style="margin-left: 3em">
+          <tr>
+            <td style="text-align: right">
+              <span summary="sampleAFailure">{{ simAFailures }}</span> Failures
+            </td>
+            <td rowspan="2" colspan="2">
+              <div class="chart-wrap mx-auto flex items-center justify-center">
+                <canvas #chart2></canvas>
+              </div>
+            </td>
+            <td>
+              <span summary="sampleBFailure">{{ simBFailures }}</span> Failures
+            </td>
+          </tr>
+          <tr>
+            <td style="text-align: right">
+              <span summary="sampleASuccess">{{ simASuccesses }}</span>
+              {{ "tpci_successes" | translate }}
+            </td>
+            <td>
+              <span summary="sampleBSuccess">{{ simBSuccesses }}</span>
+              {{ "tpci_successes" | translate }}
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="green-line"></div>
+
+    <h2>3. {{ "tpci_sampling_distribution_difference" | translate }}</h2>
+    <input type="checkbox" style="float: right" checked />
+    <div class="section flex-row">
+      <div class="lhs">
+        <div class="flex flex-col items-center justify-center">
+          <div>
+            <label for="confidence-level"
+              >{{ "tpci_confidence_level" | translate }}
+              {{ confidenceLevel }} %</label
+            >
+          </div>
+          <input
+            type="range"
+            min="1"
+            max="100"
+            class="w-1/2"
+            step="1"
+            id="confidence-level"
+            [(ngModel)]="confidenceLevel"
+          />
+          <button
+            type="button"
+            class="btn w-1/2"
+            id="buildCI"
+            (click)="updateLastChart()"
+          >
+            Build
+          </button>
+        </div>
+        <p></p>
+        <div class="stats">
+          <div>
+            <span>{{ "tpci_original_dataset_difference" | translate }}</span>
+            <span>{{ inputDifferenceProportions }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_mean_sample_differences" | translate }}</span>
+            <span>{{ simMean }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_standard_deviation" | translate }}</span>
+            <span>{{ simStdDev }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_lower_bound" | translate }}</span>
+            <span>{{ lowerBound }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_upper_bound" | translate }}</span>
+            <span>{{ upperBound }}</span>
+          </div>
+          <div>
+            <span>{{ "tpci_total_number_samples" | translate }}</span>
+            <span>{{ simTotal }}</span>
+          </div>
+        </div>
+        
+        <!-- Export buttons -->
+        <div class="form-group mt-3">
+          <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="!isExportEnabled">{{ 'tpc_export_pdf' | translate }}</button>
+        </div>
+        <div class="form-group mt-3">
+          <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="!isExportEnabled">{{ 'tpc_export_docx' | translate }}</button>
+        </div>
+      </div>
+      <div class="rhs-chart3">
+        <canvas #chart3 class="half-height"></canvas>
+      </div>
     </div>
   </div>
 </div>
