--- a/savis4/src/app/problems/problems-components/tpci/tpci.component.scss
+++ b/savis4/src/app/problems/problems-components/tpci/tpci.component.scss
@@ -1,4 +1,5 @@
 .tpci-container {
+  min-height: 100vh;
   padding: 40px;
   background-color: var(--fifth-col);
 
@@ -9,24 +10,21 @@
   }
 
   .back-button {
-    font-weight: bold;
     margin-bottom: 20px;
     margin-top: 20px;
     padding: 10px 15px;
     font-size: 1.2rem;
     color: var(--second-col);
+    border-radius: 10px;
+    color: beige;
     text-decoration: none;
     cursor: pointer;
     display: inline-block;
-    transition: color 0.3s;
-    &:hover {
-      color: var(--fourth-col);
-    }
-    background: linear-gradient(180deg, var(--key-top, #5aa573), var(--key-bot, #3f7a51));
-    box-shadow:
-    0 6px 0 var(--key-edge, #2e5f40),
-    0 2px 0 rgba(255,255,255,.12) inset,
-    0 -10px 18px rgba(0,0,0,.18) inset;
+    background-color: var(--third-col);
+  }
+  
+  .back-button:hover{
+    background-color: var(--fourth-col);
   }
 
   .content {
@@ -65,6 +63,11 @@
         }
       }
 
+    }
+
+    canvas{
+      background-color: var(--eighth-col);
+      border-radius: 10px;
     }
 
     .image-section {
@@ -140,10 +143,12 @@ h1{
   height: 100px;
   padding: 20px;
   font-size: 1rem;
+  font-weight: bold;
   font-family: 'Poppins', sans-serif;
   border: 2px solid #938f8f;
   resize: none;
   margin-top: 10px;
+  border-radius: 10px;
 }
 
 .submit-button{
@@ -151,14 +156,14 @@ h1{
   width: 30%;
   padding: 10px;
   font-size: 1rem;
-  background-color: #39843b;
-  color: white;
+  background-color: var(--third-col);
+  color: beige;
   border-radius: 6px;
   cursor: pointer;
   margin-bottom: 10px;
 
   &:hover{
-    background-color: #106c14;
+    background-color: var(--fourth-col);
   }
 }
 
@@ -167,14 +172,14 @@ h1{
   width: 30%;
   padding: 10px;
   font-size: 1rem;
-  background-color: #294c2b;
-  color: white;
+  background-color: var(--third-col);
+  color: beige;
   border-radius: 6px;
   cursor: pointer;
   margin-bottom: 12px;
 
   &:hover{
-    background-color: #388e3c;
+    background-color: var(--fourth-col);
   }
 }
 
